<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SecondActivity"
    >


<TextView
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/purple_200"
        android:text="@string/generar_recibo"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />


    <EditText
        android:id="@+id/editTextCliente"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:hint="@string/cliente"
        android:background="@drawable/border_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.136"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/editTextCostoHora"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="58dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:hint="@string/costo_hora"
        android:background="@drawable/border_text"
        android:textSize="24sp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCliente"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextTotalCobrado"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold"
        android:background="@drawable/border_text"
        android:textColorHint="#78909C"
        android:hint="@string/total_cobrado"
        android:textSize="24sp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCostoHora"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="240dp"
        android:layout_height="55dp"
        android:background="@drawable/border_button_calcular"
        android:onClick="Compartir"
        android:text="@string/compartir_recibo"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896" />
</androidx.constraintlayout.widget.ConstraintLayout>